# algorithmic_trading

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: __init__.py  alpaca_manager.py  alpaca_socket_manager.py  backtest.py  db_data_updater.py  db_manager.py  develop.py  development.py  historical_stock_data_manager.py  stock.py  stock_data_manager.py  stock_list.txt  strategies.py
tests/: testing.py
