[metadata]
name = algorithmic_trading
version = 0.0.1
author = Micheal L Palmer jr
author_email = questionallthings@yahoo.com
description = This package tests various algorithmic trading practices and tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/questionallthings/algorithmic_trading
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src